--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-/* .App {
+.App {
   text-align: center;
-} */
+}
 
 .App-logo {
   height: 40vmin;
@@ -34,7 +34,9 @@
   grid-gap: 16px;
   padding-bottom: 24px;
 }
-
+h1 {
+  text-align: center;
+}
 img {
   display: block;
   max-width: 100%;
